@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7576 2004/10/26 23:00:19 wiz Exp $
+$NetBSD: CHANGES,v 1.7577 2004/10/27 13:54:40 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4897,3 +4897,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gnome-session to 2.8.1 [jmmv 2004-10-26]
 	Removed gaim-gnome [wiz 2004-10-26]
 	Removed gaim-gtk1 [wiz 2004-10-26]
+	Updated jabberd2 to 2.0s4 [xtraeme 2004-10-26]
